--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,11 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Página de Inicio - Mi Proyecto
-{% endblock %}
-
-{% block navegacion %}
-    {% include 'navegacion.html.twig' %}
+    Página de Inicio - LMG
 {% endblock %}
 
 {% block principal %}
