--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>
-            {% block title %}Mi proyecto{% endblock %}
+            {% block title %}LMG{% endblock %}
         </title>
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
