--- a/templates/navegacion.html.twig
+++ b/templates/navegacion.html.twig
@@ -44,6 +44,16 @@
 					</a>
 				</li>
 
+				{% if app.request.pathinfo == '/galeria' %}
+					<li class="active lien">
+				{% else %}
+					<li class="lien">
+				{% endif %}
+					<a href="{{ path('sym_galeria') }}">
+						<i class="fa fa-file-text sr-icons"></i> Galeria
+					</a>
+				</li>
+
 				{% if app.request.pathinfo == '/contact' %}
 					<li class="active lien">
 				{% else %}
@@ -53,16 +63,6 @@
 						<i class="fa fa-phone-square sr-icons"></i> Contact
 					</a>
 				</li>
-
-				{# {% if app.request.pathinfo == '/galeria' %}
-					<li class="active lien">
-				{% else %}
-					<li class="lien">
-				{% endif %}
-					<a href="{{ path('sym_galeria') }}">
-						<i class="fa fa-image sr-icons"></i> Galeria
-					</a>
-				</li> #}
 			</ul>
 		</div>
 	</div>
