--- a/templates/imagen/index.html.twig
+++ b/templates/imagen/index.html.twig
@@ -1,16 +1,45 @@
-<table border="1">
-	<th>Nombre</th>
-	<th>Descripción</th>
-	<th>N.Likes</th>
-	<th>N.Visualizaciones</th>
-	<th>N.Descargas</th>
-	{% for imagen in imagenes %}
-		<tr>
-			<td>{{ imagen.getNombre() }}</td>
-			<td>{{ imagen.getDescripcion() }}</td>
-			<td>{{ imagen.getNumLikes() }}</td>
-			<td>{{ imagen.getNumVisualizaciones() }}</td>
-			<td>{{ imagen.getNumDownloads() }}</td>
-		</tr>
-	{% endfor %}
-</table>
+{% extends 'base.html.twig' %}
+
+{% block title %}Listado de Imágenes{% endblock %}
+
+{% block principal %}
+    <h1>Listado de Imágenes</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Categoría</th>
+                <th>Visualizaciones</th>
+                <th>Likes</th>
+                <th>Descargas</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for imagen in imagens %}
+            <tr>
+                <td>{{ imagen.id }}</td>
+                <td>{{ imagen.nombre }}</td>
+                <td>{{ imagen.descripcion }}</td>
+                <td>{{ imagen.categoria }}</td>
+                <td>{{ imagen.numVisualizaciones }}</td>
+                <td>{{ imagen.numLikes }}</td>
+                <td>{{ imagen.numDownloads }}</td>
+                <td>
+                    <a href="{{ path('app_imagen_show', {'id': imagen.id}) }}">Ver</a>
+                    <a href="{{ path('app_imagen_edit', {'id': imagen.id}) }}">Editar</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="8">No se encontraron registros</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('app_imagen_new') }}">Crear nueva</a>
+{% endblock %}
