--- a/templates/imagen/index.html.twig
+++ b/templates/imagen/index.html.twig
@@ -1,45 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Listado de Imágenes{% endblock %}
+{% block title %}Listado de Imágenes
+{% endblock %}
 
 {% block principal %}
-    <h1>Listado de Imágenes</h1>
+	<h1>Listado de Imágenes</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Categoría</th>
-                <th>Visualizaciones</th>
-                <th>Likes</th>
-                <th>Descargas</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for imagen in imagens %}
-            <tr>
-                <td>{{ imagen.id }}</td>
-                <td>{{ imagen.nombre }}</td>
-                <td>{{ imagen.descripcion }}</td>
-                <td>{{ imagen.categoria }}</td>
-                <td>{{ imagen.numVisualizaciones }}</td>
-                <td>{{ imagen.numLikes }}</td>
-                <td>{{ imagen.numDownloads }}</td>
-                <td>
-                    <a href="{{ path('app_imagen_show', {'id': imagen.id}) }}">Ver</a>
-                    <a href="{{ path('app_imagen_edit', {'id': imagen.id}) }}">Editar</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">No se encontraron registros</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<form action="{{ path('app_imagen_index_busqueda') }}" method="post">
+		<label>Búsqueda:</label>
+		<input type="text" name="busqueda" id="busqueda" value="">
+		<input type="submit" value="Buscar">
+	</form>
 
-    <a href="{{ path('app_imagen_new') }}">Crear nueva</a>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>
+					<a href="{{ path("app_imagen_index_ordenado", {ordenacion: 'id'}) }}">Id</a>
+				</th>
+				<th>Nombre</th>
+				<th>
+					<a href="{{ path("app_imagen_index_ordenado", {ordenacion: 'descripcion'}) }}">Descripción</a>
+				</th>
+				<th>
+					<a href="{{ path("app_imagen_index_ordenado", {ordenacion: 'categoria'}) }}">Categoría</a>
+				</th>
+				<th>Visualizaciones</th>
+				<th>Likes</th>
+				<th>Descargas</th>
+				<th>Acciones</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for imagen in imagens %}
+				<tr>
+					<td>{{ imagen.id }}</td>
+					<td><img src="{{ asset(imagen.getUrlImagenes()) }}" alt="{{ imagen.nombre }}" width="100px"></td>
+					<td>{{ imagen.descripcion }}</td>
+					<td>{{ imagen.categoria }}</td>
+					<td>{{ imagen.numVisualizaciones }}</td>
+					<td>{{ imagen.numLikes }}</td>
+					<td>{{ imagen.numDownloads }}</td>
+					<td>
+						<a href="{{ path('app_imagen_show', {'id': imagen.id}) }}">Ver</a>
+						<a href="{{ path('app_imagen_edit', {'id': imagen.id}) }}">Editar</a>
+						<a href="{{ path('app_imagen_delete_json', {'id': imagen.id}) }}" class="delete">borrar</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="8">No se encontraron registros</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+
+	<a href="{{ path('app_imagen_new') }}">Crear nueva</a>
 {% endblock %}
