--- a/templates/imagen/_form.html.twig
+++ b/templates/imagen/_form.html.twig
@@ -16,6 +16,9 @@
 			{{ form_row(form.descripcion) }}
 		</div>
 	</div>
+	<div class="col-md-4">
+		{{ form_row(form.categoria,{'label':'Categoria:','label_attr': {'class':'etiqueta'}}) }}
+	</div>
 	<div class="row">
 		<div class="col-md-12">
 			{{ form_row(form.password) }}
