--- a/templates/imagen/_form.html.twig
+++ b/templates/imagen/_form.html.twig
@@ -24,6 +24,9 @@
 			{{ form_row(form.password) }}
 		</div>
 	</div>
+	<div class="col-md-3">
+		{{ form_row(form.fecha,{'label':'Fecha de creación:','label_attr': {'class':'etiqueta'}}) }}
+	</div>
 	<div class="row">
 		<div class="col-md-4">
 			{{ form_row(form.numVisualizaciones) }}
@@ -39,4 +42,5 @@
 		<button class="btn">{{ button_label|default('Guardar') }}</button>
 	</div>
 </div>
+{{ form_errors(form) }}
 {{ form_end(form) }}
