--- a/templates/navegacion.html.twig
+++ b/templates/navegacion.html.twig
@@ -16,55 +16,75 @@
 			<ul class="nav navbar-nav">
 				{% if app.request.pathinfo == '/' or app.request.pathinfo == '/index' %}
 					<li class="active lien">
-				{% else %}
-					<li class="lien">
-				{% endif %}
-					<a href="{{ path('sym_index') }}">
-						<i class="fa fa-home sr-icons"></i> Home
-					</a>
-				</li>
+					{% else %}
+						<li class="lien">
+						{% endif %}
+						<a href="{{ path('sym_index') }}">
+							<i class="fa fa-home sr-icons"></i>
+							Home
+						</a>
+					</li>
 
 				{% if app.request.pathinfo == '/about' %}
 					<li class="active lien">
-				{% else %}
-					<li class="lien">
-				{% endif %}
-					<a href="{{ path('sym_about') }}">
-						<i class="fa fa-bookmark sr-icons"></i> About
-					</a>
-				</li>
+					{% else %}
+						<li class="lien">
+						{% endif %}
+						<a href="{{ path('sym_about') }}">
+							<i class="fa fa-bookmark sr-icons"></i>
+							About
+						</a>
+					</li>
 
 				{% if app.request.pathinfo == '/blog' %}
 					<li class="active lien">
-				{% else %}
-					<li class="lien">
-				{% endif %}
-					<a href="{{ path('sym_blog') }}">
-						<i class="fa fa-file-text sr-icons"></i> Blog
-					</a>
-				</li>
+					{% else %}
+						<li class="lien">
+						{% endif %}
+						<a href="{{ path('sym_blog') }}">
+							<i class="fa fa-file-text sr-icons"></i>
+							Blog
+						</a>
+					</li>
 
 				{% if app.request.pathinfo == '/galeria' %}
 					<li class="active lien">
-				{% else %}
-					<li class="lien">
-				{% endif %}
-					<a href="{{ path('sym_galeria') }}">
-						<i class="fa fa-file-text sr-icons"></i> Galeria
-					</a>
-				</li>
+					{% else %}
+						<li class="lien">
+						{% endif %}
+						<a href="{{ path('sym_galeria') }}">
+							<i class="fa fa-file-text sr-icons"></i>
+							Galeria
+						</a>
+					</li>
 
 				{% if app.request.pathinfo == '/contact' %}
 					<li class="active lien">
+					{% else %}
+						<li class="lien">
+						{% endif %}
+						<a href="{{ path('sym_contact') }}">
+							<i class="fa fa-phone-square sr-icons"></i>
+							Contact
+						</a>
+					</li>
+
+				{% if is_granted('IS_AUTHENTICATED') %}
+					<li class=" lien">
+						<a href={{ path('app_logout') }}>
+							<i class="fa fa-sign-out sr-icons"></i>
+							Logout - {{app.user.username }}</a>
+					</li>
 				{% else %}
-					<li class="lien">
+					<li class=" lien">
+						<a href={{ path('app_login') }}>
+							<i class="fa fa-sign-in sr-icons"></i>
+							Login</a>
+					</li>
 				{% endif %}
-					<a href="{{ path('sym_contact') }}">
-						<i class="fa fa-phone-square sr-icons"></i> Contact
-					</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</nav>
-<!-- End of Navigation Bar -->
+
+								</ul>
+							</div>
+						</div>
+					</nav>
+					<!-- End of Navigation Bar -->
