--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -18,6 +18,6 @@
 	</style>
 	<div class="example-wrapper">
 		<br><br>
-		<h1>No se ha encontrado el elemento buscado</h1>
+		<h1>Error</h1>
 	</div>
 {% endblock %}
